src/main/java/swscale/SwscaleLibrary.java


import com.ochafik.lang.jnaerator.runtime.LibraryExtractor;
import com.ochafik.lang.jnaerator.runtime.Mangling;
import com.sun.jna.Library;
import com.sun.jna.Native;
import com.sun.jna.NativeLibrary;
import com.sun.jna.NativeLong;
import com.sun.jna.Pointer;
import com.sun.jna.ptr.DoubleByReference;
import com.sun.jna.ptr.IntByReference;
import com.sun.jna.ptr.PointerByReference;
/**
 * JNA Wrapper for library <b>swscale</b><br>
 * This file was autogenerated by <a href="http://jnaerator.googlecode.com/">JNAerator</a>,<br>
 * a tool written by <a href="http://ochafik.free.fr/">Olivier Chafik</a> that <a href="http://code.google.com/p/jnaerator/wiki/CreditsAndLicense">uses a few opensource projects.</a>.<br>
 * For help, please visit <a href="http://nativelibs4java.googlecode.com/">NativeLibs4Java</a> , <a href="http://rococoa.dev.java.net/">Rococoa</a>, or <a href="http://jna.dev.java.net/">JNA</a>.
 */
public interface SwscaleLibrary extends Library {
	public static final String JNA_LIBRARY_NAME = LibraryExtractor.getLibraryPath("swscale", true, swscale.SwscaleLibrary.class);
	public static final NativeLibrary JNA_NATIVE_LIB = NativeLibrary.getInstance(swscale.SwscaleLibrary.JNA_LIBRARY_NAME, com.ochafik.lang.jnaerator.runtime.MangledFunctionMapper.DEFAULT_OPTIONS);
	public static final SwscaleLibrary INSTANCE = (SwscaleLibrary)Native.loadLibrary(swscale.SwscaleLibrary.JNA_LIBRARY_NAME, swscale.SwscaleLibrary.class, com.ochafik.lang.jnaerator.runtime.MangledFunctionMapper.DEFAULT_OPTIONS);
	/**
	 * <i>native declaration : src/main/headers/libavutil/avutil.h:71</i><br>
	 * enum values
	 */
	public static interface AVMediaType {
		/// <i>native declaration : src/main/headers/libavutil/avutil.h:72</i>
		public static final int AVMEDIA_TYPE_UNKNOWN = -1;
		/// <i>native declaration : src/main/headers/libavutil/avutil.h:73</i>
		public static final int AVMEDIA_TYPE_VIDEO = 0;
		/// <i>native declaration : src/main/headers/libavutil/avutil.h:74</i>
		public static final int AVMEDIA_TYPE_AUDIO = 1;
		/// <i>native declaration : src/main/headers/libavutil/avutil.h:75</i>
		public static final int AVMEDIA_TYPE_DATA = 2;
		/// <i>native declaration : src/main/headers/libavutil/avutil.h:76</i>
		public static final int AVMEDIA_TYPE_SUBTITLE = 3;
		/// <i>native declaration : src/main/headers/libavutil/avutil.h:77</i>
		public static final int AVMEDIA_TYPE_ATTACHMENT = 4;
		/// <i>native declaration : src/main/headers/libavutil/avutil.h:78</i>
		public static final int AVMEDIA_TYPE_NB = 5;
	};
	/**
	 * Conversion Error : a.num<br>
	 * SKIPPED:<br>
	 * <i>native declaration : src/main/headers/libavutil/rational.h</i><br>
	 * const int64_t tmp = a.num * (int64_t)b.den - b.num * (int64_t)a.den;
	 */
	/// <i>native declaration : src/main/headers/libswscale/swscale.h</i>
	public static final int SWS_BITEXACT = 524288;
	/// <i>native declaration : src/main/headers/libswscale/swscale.h</i>
	public static final int SWS_AREA = 32;
	/// <i>native declaration : src/main/headers/libswscale/swscale.h</i>
	public static final int SWS_CPU_CAPS_MMX = -2147483648;
	/// <i>native declaration : src/main/headers/libswscale/swscale.h</i>
	public static final int SWS_SINC = 256;
	/// <i>native declaration : src/main/headers/libswscale/swscale.h</i>
	public static final int SWS_GAUSS = 128;
	/// <i>native declaration : src/main/headers/libswscale/swscale.h</i>
	public static final int SWS_CS_FCC = 4;
	/// <i>native declaration : src/main/headers/libavutil/avutil.h</i>
	public static final int LIBAVUTIL_VERSION_MICRO = 1;
	/// <i>native declaration : src/main/headers/libswscale/swscale.h</i>
	public static final int SWS_BICUBLIN = 64;
	/// <i>native declaration : src/main/headers/libswscale/swscale.h</i>
	public static final String LIBSWSCALE_IDENT = "SwS";
	/// <i>native declaration : src/main/headers/libswscale/swscale.h</i>
	public static final int SWS_SPLINE = 1024;
	/// <i>native declaration : src/main/headers/libswscale/swscale.h</i>
	public static final int SWS_DIRECT_BGR = 32768;
	/// <i>native declaration : src/main/headers/libswscale/swscale.h</i>
	public static final int SWS_CS_ITU624 = 5;
	/// <i>native declaration : src/main/headers/libswscale/swscale.h</i>
	public static final int SWS_CPU_CAPS_ALTIVEC = 268435456;
	/// <i>native declaration : src/main/headers/libswscale/swscale.h</i>
	public static final int SWS_PRINT_INFO = 4096;
	/// <i>native declaration : src/main/headers/libswscale/swscale.h</i>
	public static final int SWS_SRC_V_CHR_DROP_SHIFT = 16;
	/// <i>native declaration : src/main/headers/libswscale/swscale.h</i>
	public static final int SWS_POINT = 16;
	/// <i>native declaration : src/main/headers/libswscale/swscale.h</i>
	public static final double SWS_MAX_REDUCE_CUTOFF = 0.0020;
	/// <i>native declaration : src/main/headers/libswscale/swscale.h</i>
	public static final int SWS_CS_SMPTE240M = 7;
	/// <i>native declaration : src/main/headers/libswscale/swscale.h</i>
	public static final int SWS_X = 8;
	/// <i>native declaration : src/main/headers/libswscale/swscale.h</i>
	public static final int SWS_CS_ITU601 = 5;
	/// <i>native declaration : src/main/headers/libavutil/avutil.h</i>
	public static final int LIBAVUTIL_VERSION_MAJOR = 50;
	/// <i>native declaration : src/main/headers/libswscale/swscale.h</i>
	public static final int SWS_CS_DEFAULT = 5;
	/// <i>native declaration : src/main/headers/libswscale/swscale.h</i>
	public static final int SWS_CS_SMPTE170M = 5;
	/// <i>native declaration : src/main/headers/libswscale/swscale.h</i>
	public static final int SWS_FAST_BILINEAR = 1;
	/// <i>native declaration : src/main/headers/libswscale/swscale.h</i>
	public static final int SWS_ACCURATE_RND = 262144;
	/// <i>native declaration : src/main/headers/libswscale/swscale.h</i>
	public static final int SWS_FULL_CHR_H_INP = 16384;
	/// <i>native declaration : src/main/headers/libswscale/swscale.h</i>
	public static final int SWS_FULL_CHR_H_INT = 8192;
	/// <i>native declaration : src/main/headers/libswscale/swscale.h</i>
	public static final int SWS_LANCZOS = 512;
	/// <i>native declaration : src/main/headers/libswscale/swscale.h</i>
	public static final int LIBSWSCALE_VERSION_MAJOR = 1;
	/// <i>native declaration : src/main/headers/libswscale/swscale.h</i>
	public static final int SWS_BICUBIC = 4;
	/// <i>native declaration : src/main/headers/libswscale/swscale.h</i>
	public static final int SWS_SRC_V_CHR_DROP_MASK = 196608;
	/// <i>native declaration : src/main/headers/libswscale/swscale.h</i>
	public static final int SWS_CPU_CAPS_3DNOW = 1073741824;
	/// <i>native declaration : src/main/headers/libswscale/swscale.h</i>
	public static final int SWS_CPU_CAPS_MMX2 = 536870912;
	/// <i>native declaration : src/main/headers/libswscale/swscale.h</i>
	public static final int SWS_CS_ITU709 = 1;
	/// <i>native declaration : src/main/headers/libswscale/swscale.h</i>
	public static final int LIBSWSCALE_VERSION_MICRO = 0;
	/// <i>native declaration : src/main/headers/libswscale/swscale.h</i>
	public static final int SWS_CPU_CAPS_BFIN = 16777216;
	/// <i>native declaration : src/main/headers/libavutil/avutil.h</i>
	public static final int LIBAVUTIL_VERSION_MINOR = 15;
	/// <i>native declaration : src/main/headers/libavutil/avutil.h</i>
	public static final String LIBAVUTIL_IDENT = "Lavu";
	/// <i>native declaration : src/main/headers/libswscale/swscale.h</i>
	public static final int LIBSWSCALE_VERSION_MINOR = 11;
	/// <i>native declaration : src/main/headers/libswscale/swscale.h</i>
	public static final int SWS_BILINEAR = 2;
	/// <i>native declaration : src/main/headers/libswscale/swscale.h</i>
	public static final int SWS_PARAM_DEFAULT = 123456;
	/**
	 * Returns the LIBAVUTIL_VERSION_INT constant.<br>
	 * Original signature : <code>avutil_version()</code><br>
	 * <i>native declaration : src/main/headers/libavutil/avutil.h:59</i>
	 */
	@Mangling({"_Z14avutil_versionv", "?avutil_version@@YAXXZ"}) 
	int avutil_version();
	/**
	 * Returns the libavutil build-time configuration.<br>
	 * Original signature : <code>char* avutil_configuration()</code><br>
	 * <i>native declaration : src/main/headers/libavutil/avutil.h:64</i>
	 */
	@Mangling({"_Z20avutil_configurationv", "?avutil_configuration@@YAQBDXZ"}) 
	String avutil_configuration();
	/**
	 * Returns the libavutil license.<br>
	 * Original signature : <code>char* avutil_license()</code><br>
	 * <i>native declaration : src/main/headers/libavutil/avutil.h:69</i>
	 */
	@Mangling({"_Z14avutil_licensev", "?avutil_license@@YAQBDXZ"}) 
	String avutil_license();
	/**
	 * Returns the LIBSWSCALE_VERSION_INT constant.<br>
	 * Original signature : <code>swscale_version()</code><br>
	 * <i>native declaration : src/main/headers/libswscale/swscale.h:48</i>
	 */
	@Mangling({"_Z15swscale_versionv", "?swscale_version@@YAXXZ"}) 
	int swscale_version();
	/**
	 * Returns the libswscale build-time configuration.<br>
	 * Original signature : <code>char* swscale_configuration()</code><br>
	 * <i>native declaration : src/main/headers/libswscale/swscale.h:53</i>
	 */
	@Mangling({"_Z21swscale_configurationv", "?swscale_configuration@@YAQBDXZ"}) 
	String swscale_configuration();
	/**
	 * Returns the libswscale license.<br>
	 * Original signature : <code>char* swscale_license()</code><br>
	 * <i>native declaration : src/main/headers/libswscale/swscale.h:58</i>
	 */
	@Mangling({"_Z15swscale_licensev", "?swscale_license@@YAQBDXZ"}) 
	String swscale_license();
	/**
	 * Returns a pointer to yuv<->rgb coefficients for the given colorspace<br>
	 * suitable for sws_setColorspaceDetails().<br>
	 * * @param colorspace One of the SWS_CS_* macros. If invalid,<br>
	 * SWS_CS_DEFAULT is used.<br>
	 * Original signature : <code>int* sws_getCoefficients(int)</code><br>
	 * <i>native declaration : src/main/headers/libswscale/swscale.h:112</i>
	 */
	@Mangling({"_Z19sws_getCoefficientsi", "?sws_getCoefficients@@YAQBHH@Z"}) 
	IntByReference sws_getCoefficients(int colorspace);
	/**
	 * Returns a positive value if pix_fmt is a supported input format, 0<br>
	 * otherwise.<br>
	 * Original signature : <code>int sws_isSupportedInput(PixelFormat)</code><br>
	 * <i>native declaration : src/main/headers/libswscale/swscale.h:136</i><br>
	 * @param pix_fmt @see PixelFormat
	 */
	@Mangling({"_Z20sws_isSupportedInput11PixelFormat", "?sws_isSupportedInput@@YAH11PixelFormat@Z"}) 
	int sws_isSupportedInput(int pix_fmt);
	/**
	 * Returns a positive value if pix_fmt is a supported output format, 0<br>
	 * otherwise.<br>
	 * Original signature : <code>int sws_isSupportedOutput(PixelFormat)</code><br>
	 * <i>native declaration : src/main/headers/libswscale/swscale.h:142</i><br>
	 * @param pix_fmt @see PixelFormat
	 */
	@Mangling({"_Z21sws_isSupportedOutput11PixelFormat", "?sws_isSupportedOutput@@YAH11PixelFormat@Z"}) 
	int sws_isSupportedOutput(int pix_fmt);
	/**
	 * Frees the swscaler context swsContext.<br>
	 * If swsContext is NULL, then does nothing.<br>
	 * Original signature : <code>void sws_freeContext(SwsContext*)</code><br>
	 * <i>native declaration : src/main/headers/libswscale/swscale.h:148</i>
	 */
	@Mangling({"_Z15sws_freeContextP10SwsContext", "?sws_freeContext@@YAXPA10SwsContext@Z"}) 
	void sws_freeContext(Pointer swsContext);
